# GAMES202-Assignments

./: .gitignore  Readme.md
homework0/src/loads/: loadOBJ.js
homework0/src/shaders/: InternalShader.js
homework1/homework1/src/lights/: DirectionalLight.js
homework1/homework1/src/shaders/phongShader/: phongFragment.glsl  phongVertex.glsl
homework2/: dependencies.txt
homework2/homework2/assets/cubemap/GraceCathedral/: transport.txt
homework2/homework2/assets/cubemap/Indoor/: transport.txt
homework2/homework2/assets/cubemap/Skybox/: transport.txt
homework2/homework2/src/: engine.js
homework2/homework2/src/loads/: loadOBJ.js
homework2/homework2/src/materials/: PRTMaterial.js
homework2/homework2/src/renderers/: MeshRender.js  WebGLRenderer.js
homework2/homework2/src/shaders/prtShader/: prtFragment.glsl  prtVertex.glsl
homework2/prt/: CMakeLists.txt  compile_commands.json
homework2/prt/src/: prt.cpp
homework3/src/: engine.js
homework3/src/lights/: DirectionalLight.js  PointLight.js
homework3/src/loads/: loadGLTF.js
homework3/src/materials/: DirectLightMaterial.js  SSRMaterial.js
homework3/src/renderers/: WebGLRenderer.js
homework3/src/shaders/directLightShader/: directFragment.glsl
homework3/src/shaders/gbufferShader/: gbufferFragment.glsl
homework3/src/shaders/ssrShader/: ssrFragment.glsl
homework3/src/textures/: FBO.js
homework4/lut-gen/: CMakeLists.txt  Eavg_IS.cpp  Emu_IS.cpp  Emu_MC.cpp
homework4/lut-gen/ext/: vec.h
homework5/: CMakeLists.txt
homework5/src/: denoiser.cpp  denoiser.h  main.cpp
(+3 files in other folders)
